<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="right"
        android:orientation="vertical"
         android:background="@color/transparent" >

        <TextView
            android:id="@+id/infoScreenDetails"
            style="@style/txtIntroductionContent"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/bitTransparent"
            android:fadeScrollbars="true"
            android:fadingEdge="none"
            android:text="@string/TISInfoScreenText"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/transparent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bitTransparent"
            android:gravity="right"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/dontShowAgainCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp" />

            <TextView
                style="@style/txtIntroductionContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/dontShowAgainCheck"
                android:paddingRight="5dp"
                android:text="@string/TISFlowInfoScreenCheckBoxCaption"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/closeInfoScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TISFlowInfoScreenButtonCaption" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>